--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-	"name": "vue-components",
-	"version": "1.0.0",
-	"description": "",
-	"private": true,
-	"main": "index.js",
-	"scripts": {
-		"dev": "pnpm -C play dev",
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"@dew-ui/components": "workspace:*",
-		"@dew-ui/theme-chalk": "workspace:*",
-		"@dew-ui/utils": "workspace:*",
-		"typescript": "^5.7.2",
-		"vue": "^3.5.13"
-	},
-	"devDependencies": {
-		"@eslint/js": "^9.16.0",
-		"eslint": "^9.16.0",
-		"eslint-plugin-vue": "^9.32.0",
-		"globals": "^15.13.0",
-		"sass": "^1.82.0",
-		"typescript-eslint": "^8.17.0",
-		"unplugin-vue-define-options": "^1.5.2"
-	}
+  "name": "vue-components",
+  "version": "1.0.0",
+  "description": "",
+  "private": true,
+  "main": "index.js",
+  "scripts": {
+    "dev": "pnpm -C play dev",
+    "doc:dev": "pnpm -C docs dev --port 5174",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@dew-ui/components": "workspace:*",
+    "@dew-ui/theme-chalk": "workspace:*",
+    "@dew-ui/utils": "workspace:*",
+    "typescript": "^5.7.2",
+    "vue": "^3.5.13"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.16.0",
+    "eslint": "^9.16.0",
+    "eslint-plugin-vue": "^9.32.0",
+    "globals": "^15.13.0",
+    "sass": "^1.82.0",
+    "typescript-eslint": "^8.17.0",
+    "unplugin-vue-define-options": "^1.5.2"
+  }
 }
