--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@dew-ui/theme-chalk": "workspace:*",
     "@dew-ui/utils": "workspace:*",
     "async-validator": "^4.2.5",
+    "dayjs": "^1.11.13",
     "typescript": "^5.7.2",
     "vue": "^3.5.13"
   },
