--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@dew-ui/utils": "workspace:*",
     "async-validator": "^4.2.5",
     "dayjs": "^1.11.13",
+    "mockjs": "^1.1.0",
     "typescript": "^5.7.2",
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@types/mockjs": "^1.0.10",
     "@typescript-eslint/eslint-plugin": "^8.18.1",
     "@typescript-eslint/parser": "^8.18.1",
     "eslint": "^9.17.0",
