--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "vue-components",
   "version": "1.0.0",
-  "description": "",
   "private": true,
+  "description": "",
+  "author": "",
+  "license": "ISC",
+  "keywords": [],
   "main": "index.js",
   "scripts": {
     "dev": "pnpm -C play dev",
     "doc:dev": "pnpm -C docs dev --port 5174",
-    "lint:script": "eslint --ext .js,.jsx,.vue,.ts,.tsx --fix --quiet ./",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "@dew-ui/components": "workspace:*",
     "@dew-ui/theme-chalk": "workspace:*",
@@ -24,13 +24,9 @@
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^3.16.0",
     "@types/mockjs": "^1.0.10",
-    "@typescript-eslint/eslint-plugin": "^8.18.1",
-    "@typescript-eslint/parser": "^8.18.1",
     "eslint": "^9.17.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-vue": "^9.32.0",
     "sass": "^1.82.0",
     "unplugin-vue-define-options": "^1.5.2"
   }
