--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "vue": "^3.5.13"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.16.0",
+    "@antfu/eslint-config": "^4.1.0",
     "@types/mockjs": "^1.0.10",
     "eslint": "^9.17.0",
+    "eslint-plugin-format": "^1.0.1",
     "sass": "^1.82.0",
     "unplugin-vue-define-options": "^1.5.2"
   }
