--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "vue-components",
+  "name": "dew-ui",
   "version": "1.0.0",
   "private": true,
   "description": "",
-  "author": "",
+  "author": "zhongdewei",
   "license": "ISC",
   "keywords": [],
   "main": "index.js",
